--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     <nav>
         <div class="nav-brand">
             <a href="{% url 'dashboard:dashboard' %}">
-                <i class="fas fa-bolt"></i> CRM Leads
+                <i class="fas fa-bolt"></i> ECM
             </a>
         </div>
         
